Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36658

Qt Android crashes taking android device name

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0
    • 5.3.0
    • QPA
    • None
    • Andoid KitKat
    • Android
    • bde1e6718385c4c7c92bfda9ee4b52b99ff92214

    Description

      Application built for Android at crashes at startup on Sony Xperia Phablet
      The crash is in the code (qsgatlastexture.cpp):
      #ifdef QT_OPENGL_ES
      #if defined(Q_OS_ANDROID) && !defined(Q_OS_ANDROID_NO_SDK)
      QString *deviceName =
      static_cast<QString *>(QGuiApplication::platformNativeInterface()->nativeResourceForIntegration("AndroidDeviceName"));
      >>crash here>> static bool wrongfullyReportsBgra8888Support = deviceName->compare(QStringLiteral("samsung SM-T211"), Qt::CaseInsensitive) == 0

      deviceName->compare(QStringLiteral("samsung SM-T210"), Qt::CaseInsensitive) == 0
      deviceName->compare(QStringLiteral("samsung SM-T215"), Qt::CaseInsensitive) == 0;
      #else
      static bool wrongfullyReportsBgra8888Support = false;
      #endif

      Crash reason: the deviceName pointer is null

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            vladest Vlad Stelmahovsky
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes